# Alv

./: .gitignore  LICENSE  README.md  environment.yml  environment_aarm64.yml  pyproject.toml
Alv/: alv.py  dashboard.py  main.py  utils.py
Alv/ASR/: HuggingfaceASR.py  __init__.py
Alv/IntentDetector/: __init__.py  sentence_transformer.py
Alv/Recorder/: __init__.py  localfile.py  pyaudio.py  sounddevice.py
Alv/VAD/: __init__.py  pyannote.py  pyannoteVAD.py  webrtc.py
