[tool.poetry]
name = "alv"
version = "0.0.1"
description = "{A}daptive multi-{l}ingual {v}oice-assistant (short for Alvred)"
authors = ["Christoph Minixhofer <christoph.minixhofer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.15.0"
torch = "^1.10.1"
torchaudio = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
